# Lab

./: .gitignore  0.1-data_ingestion_simple.ipynb  1-model_training.ipynb  1.model_training.ipynb  api_call.py  docker-compose.yaml  helper.py  model_train.ipynb  papers.txt  pyproject.toml
archive/: 0-data_ingestion.ipynb  1-model_training.ipynb  etl_pipe.py  model_predict.py
archive/models/: LGBMClassifier_15.pkl
archive/src/: model_training.py
archive/src/utils/: db.py  helper.py
data/boundaries/: Amsterdam.json  amsterdam_21.geojson
misc/: .env  rotterdam_.geojson
misc/references/: attributions.txt  benchmarks_LGB.txt
models/: LGBMClassifier_30.pkl  LGBMClassifier_5.pkl  LGBMClassifier_5_v2.pkl  LGBMClassifier_60.pkl
notebooks/: 0-data_ingestion.ipynb  0.1-data_ingestion_simple.ipynb  1-model_training.ipynb  1.0-model_training.ipynb  1.1-model_training_v2.ipynb  2-prediction_plots.ipynb
src/: api_call.py  app.py  etl_pipe.py  make_dataset.py  model_predict.py  model_training.py  model_training_v2.py
src/utils/: api_call.py  db.py  helper.py  logger.py
